# CollageManagementSystem

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  starter.sh
CollageManagementSystem/: asgi.py  settings.py  urls.py  wsgi.py
core/: HodViews.py  StaffViews.py  StudentViews.py  admin.py  forms.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_assigment_answerpaper.py  0002_comment_workingdays_timeslots_slotsubject_reply_and_more.py  0003_standard_subject.py
templates/: base.html  home.html  login_page.html  registration.html
templates/curriculum/: lesson_create.html  lesson_delete.html  lesson_detail_view.html  lesson_update_view.html  standard_list_view.html  subject_list_view.html
templates/hod_template/: base_template.html  sidebar_template.html
templates/staff_template/: add_assigment.html  base_template.html  sidebar_template.html
templates/student_template/: base_template.html  sidebar_template.html
